<resources>
    <string name="app_name">Navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_agrega_productos">Agregar productos</string>
    <string name="menu_usuario">Nombre de usuario</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_inicio1">Inicio1</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_estado">Estado de compra</string>
    <string name="menu_compras">mis compras</string>
    <string name="menu_notif">notificaciones</string>
    <string name="menu_cat">Categorias</string>
    <string name="menu_promo">promociones</string>
    <string name="menu_guardados">Guardados</string>
    <string name="menu_cambios">Cambios</string>
    <string name="menu_carrito">Carrito</string>
    <string name="menu_pago">Metodo de pago</string>
    <string name="menu_priv">Politica de privacidad</string>
    <string name="menu_datos">Mis datos</string>
    <string name="menu_pref">Preferencias</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_salir">Salir de la cuenta</string>
    <string name="titulo">Informacion de tarjeta</string>
    <string name="numeroTarjeta">no. tarjeta</string>
    <string name="nombre">Nombre</string>
    <string name="mes">mes</string>
    <string name="anio">año</string>
    <string name="cvv">cvv</string>
    <string name="scan">Escanear Tarjeta</string>
    <string name="inicio_titulo">PRODUCTOS</string>
    <string name="inicio_tv1">Cortinas</string>
    <string name="inicio_tv2">Sabanas Grises</string>
    <string name="inicio_tv3">Cant:10</string>
    <string name="inicio_tv4">Edredon</string>
    <string name="inicio_tv5">Cant:10</string>
    <string name="inicio_tv6">cant:10</string>
    <string name="inicio_des_iv1">TODO</string>
    <string name="inicio_des_iv2">TODO</string>
    <string name="inicio_iv3">TODO</string>
    <string name="inicio_iv4">TODO</string>
    <string name="car_tv1">CARRITO</string>
    <string name="car_tv2">Intex Beanless Bag Chair</string>
    <string name="car_des_iv1">jhygjh</string>
    <string name="car_des_iv2">sillon</string>
    <string name="car_tv3">Macetero colgante de 5 piezas con 5 ganchos</string>
    <string name="car_des_iv3">maceteros</string>
    <string name="agregar_titulo">Agregar producto</string>
    <string name="agrega_tv_producto">Producto:</string>
    <string name="agrega_et_producto">Name</string>
    <string name="agrega_tv_cantidad">Cantidad a agregar:</string>
    <string name="agrega_btn">Agregar</string>
    <string name="ayuda_tv_compras">Administracion y cancelacion de compras</string>
    <string name="ayuda_tv_dev">Devoluciones</string>
    <string name="ayuda_tv_preg">Preguntas frecuentes</string>
    <string name="cat_recamaras">Recamaras</string>
    <string name="cat_edredones">Edredones</string>
    <string name="cat_sabanas">Sabanas</string>
    <string name="cat_batas">Batas</string>
    <string name="cat_toallas">toallas</string>
    <string name="cat_titulo">Categorias</string>
    <string name="cat_cortinas">Cortinas</string>
    <string name="cat_colchas">Colchas</string>
    <string name="cat_cosina">Cosina</string>
    <string name="cat_cocina">cocina</string>
    <string name="desc_prod">Uso exclusivo con juegos digitales; la consola no reproduce discos físicos Totalmente digital, ofrece juegos de próxima generación a un precio accesible Gran velocidad y el rendimiento de próxima generación con la arquitectura Xbox Velocity e impulsada por un SSD personalizado y software integrado Juega miles de títulos de cuatro generaciones de Xbox con compatibilidad con versiones anteriores, incluidos títulos optimizados con el lanzamiento Descarga y juega más de 100 juegos de alta calidad, incluidos todos los títulos nuevos de Xbox Game Studios. Encuentra videojuegos, controles para Xbox, pantallas y consolas portátiles en nuestra tienda tecnológica en línea sin salir de casa.</string>
    <string name="desc_producto">Consola Xbox Series S 512 GB Negro</string>
    <string name="desc_productos">Descripcion Productos</string>
    <string name="desc_precio">$7,149.00MX</string>
    <string name="desc_descripcion">Descripcion</string>
    <string name="desc_btn">Comprar</string>
    <string name="dev_descripcion">Se aceptarán cambios y/o devoluciones dentro de un plazo de hasta 15 días naturales después de la fecha de compra, aplican exclusivamente a producto que se haya mandado con especificaciones diferentes al que se ha adquirido.</string>
    <string name="dev_titulo">¿Como realizar una devolucion?</string>
    <string name="edo_prod">XBOX One</string>
    <string name="edo_desc">Lega el 18 de octubre, entregamos tu paquete a las 2:00 pm , Aguascalientes, Ags Ojocalientes #311</string>
    <string name="log_registrar">REGISTRAR</string>
    <string name="log_correo">Correo</string>
    <string name="log_contraseña">Contraseña</string>
    <string name="log_ingresar">INGRESAR</string>
    <string name="pago_titulo">Forma de Pago:</string>
    <string name="pago_credito">Tarjeta de Debito</string>
    <string name="pago_debito">Tarjeta de Credito</string>
    <string name="pago_efectivo">Pago en Efectivo</string>
    <string name="pago_agregar">Agregar Tarjeta</string>
    <string name="priv_titulo">Politica Privacidad</string>
    <string name="priv_desc">En HomeDecor entendemos a la protección de los datos personales como una oportunidad para generar valor para nuestros usuarios. Haciendo un uso responsable de la información personal, no sólo protegemos la privacidad de quienes nos confiaron sus datos, sino que les permitimos operar con seguridad y confianza en nuestro ecosistema. Por ello, tu privacidad es muy importante para nosotros y nos esforzamos para protegerla. HomeDecor, con el fin de poder brindarte sus servicios, trata, recolecta y en algunos casos revela información sobre las personas que, como tú, son usuarios y visitantes de los sitios web y/o aplicaciones móviles, conforme se detalla aquí (las Plataformas y los Servicios, respectivamente). Esta Declaración de Privacidad y Confidencialidad de la Información de Mercado Libre (la Declaración de Privacidad) describen la información que HomeDecor recolecta y trata sobre ti y lo que puede hacer con esa información. Esta Declaración de Privacidad es parte integrante de los Términos y Condiciones Generales de HomeDecor. Prestar tu consentimiento voluntario, expreso e informado a esta Declaración de Privacidad es un requisito esencial para poder contratar y/o tener cualquier tipo de relación con Mercado Libre, dependiendo de la legislación aplicable en cada país.</string>
    <string name="pref_titulo">Elige que tipo de información quieres recibir:</string>
    <string name="pref1">Descuentos sobre algún producto</string>
    <string name="pref2">Promociones sobre productos de interes</string>
    <string name="pref3">Información de productos por correo</string>
    <string name="pref4">Opinión sobre producto</string>
    <string name="pref5">Preguntas a tus wishlist</string>
    <string name="pref6">Venta de algún producto</string>
    <string name="pref7">Tú publicación esta por finalizar</string>
    <string name="pref8">Compartir un producto</string>
    <string name="pref9">Novedades sobre productos de interes</string>
    <string name="title_activity_inicio">ScrollingActivity</string>
</resources>