<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categorias">

    <Button
        android:id="@+id/btn7"
        android:layout_width="390dp"
        android:layout_height="51dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_recamaras"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="390dp"
        android:layout_height="51dp"
        android:layout_marginTop="1dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_edredones"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="390dp"
        android:layout_height="51dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_sabanas"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="391dp"
        android:layout_height="52dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_batas"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="390dp"
        android:layout_height="51dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_toallas"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="76dp"
        android:text="@string/cat_titulo"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="391dp"
        android:layout_height="52dp"
        android:layout_marginTop="39dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_cortinas"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="390dp"
        android:layout_height="51dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_colchas"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="390dp"
        android:layout_height="51dp"
        android:background="#00FFFFFF"
        android:text="@string/cat_cocina"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />


</androidx.constraintlayout.widget.ConstraintLayout>