<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregar_productos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="44dp"
        android:text="@string/agregar_titulo"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="-2dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="185dp"
        android:layout_height="43dp"
        android:text="@string/agrega_tv_producto"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="121dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/agrega_et_producto"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="165dp"
        tools:ignore="LabelFor,MissingConstraints"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:text="@string/agrega_tv_cantidad"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="215dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="268dp"
        tools:ignore="LabelFor,MissingConstraints"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agrega_btn"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="365dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>