<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio1">

    <TextView
        android:id="@+id/inicio_tv_titulo"
        android:layout_width="194dp"
        android:layout_height="43dp"
        android:text="@string/inicio_titulo"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="31dp"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/inicio_ib_carrito"
        android:layout_width="86dp"
        android:layout_height="89dp"
        app:srcCompat="@drawable/carrito"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="-3dp"
        tools:ignore="MissingConstraints, contentDescription"/>

        <ImageView
            android:id="@+id/imageViewp2"
            android:layout_width="160dp"
            android:layout_height="145dp"
            app:srcCompat="@drawable/sabanas"
            tools:ignore="MissingConstraints,contentDescription"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="273dp" />

        <TextView
            android:id="@+id/textViewp1"
            android:layout_width="222dp"
            android:layout_height="94dp"
            android:gravity="center"
            android:text="@string/inicio_tv1"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="150dp" />
    <ImageView
        android:id="@+id/imageViewp1"
        android:layout_width="160dp"
        android:layout_height="139dp"
        app:srcCompat="@drawable/cortinas"
        tools:ignore="MissingConstraints,contentDescription"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/textViep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inicio_tv2"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="324dp" />

    <TextView
        android:id="@+id/textViewc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_tv3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/textViewp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inicio_tv4"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="497dp" />

    <TextView
        android:id="@+id/textViewc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_tv5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="530dp" />

    <ImageView
        android:id="@+id/imageViewp3"
        android:layout_width="160dp"
        android:layout_height="136dp"
        app:srcCompat="@drawable/edredon"
        tools:ignore="MissingConstraints, contentDescription"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="434dp" />

    <TextView
        android:id="@+id/textViewc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_tv6"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="107dp"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>